--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "js-yaml": ">=3.13.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.9.0",
         "admin-lte": "^3.0.0-alpha.2"
     }
 }
+
