--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "js-yaml": ">=3.13.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7",
-        "js-yaml": ">=3.13.1"
+        "popper.js": "^1.12",
+        "vue": "^2.5.7"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.9.0",
         "admin-lte": "^3.0.0-alpha.2",
+        "vform": "^1.0.1",
         "vue-router": "^3.0.7"
     }
 }
